:sparkles: add support K3 device as separate device

--- a/custom_components/petkit/translations/en.json
+++ b/custom_components/petkit/translations/en.json
@@ -27,6 +27,12 @@
       "battery": {
         "name": "Battery"
       },
+      "light": {
+        "name": "Light"
+      },
+      "spray": {
+        "name": "Spray"
+      },
       "battery_installed": {
         "name": "Battery installed"
       },
@@ -429,6 +435,9 @@
       },
       "smart_spray_battery": {
         "name": "Smart spray battery"
+      },
+      "spray_times": {
+        "name": "Spray times"
       },
       "spray_deodorant_liquid": {
         "name": "Spray deodorant liquid"
