:pencil2: fix typos

--- a/custom_components/petkit/translations/en.json
+++ b/custom_components/petkit/translations/en.json
@@ -316,10 +316,10 @@
           "auto_cleaning_failed_hall_l": "Auto cleaning failed: hall L",
           "auto_cleaning_failed_hall_t": "Auto cleaning failed: hall T",
           "auto_cleaning_terminated": "Auto cleaning terminated",
-          "auto_odor_failed": "Auto odor failed",
+          "auto_odor_failed": "Auto deodorization failed",
           "clean_over": "Clean",
-          "deodorant_finished": "Deodorant finished",
-          "deodorant_finished_liquid_lack": "Deodorant finished: liquid lack",
+          "deodorant_finished": "Deodorization finished",
+          "deodorant_finished_liquid_lack": "Deodorization finished: liquid lack",
           "light_over": "Light",
           "litter_empty_completed": "Litter empty completed",
           "litter_empty_failed_full": "Litter empty failed: full",
@@ -339,9 +339,9 @@
           "periodic_cleaning_canceled_kitten": "Periodic cleaning canceled: kitten",
           "periodic_cleaning_completed": "Periodic cleaning completed",
           "periodic_cleaning_terminated": "Periodic cleaning terminated",
-          "periodic_odor_completed": "Periodic odor completed",
-          "periodic_odor_completed_liquid_lack": "Periodic odor completed: liquid lack",
-          "periodic_odor_failed": "Periodic odor failed",
+          "periodic_odor_completed": "Periodic deodorization completed",
+          "periodic_odor_completed_liquid_lack": "Periodic deodorization completed: liquid lack",
+          "periodic_odor_failed": "Periodic deodorization failed",
           "pet_detect": "Pet detected",
           "pet_out": "Pet out",
           "reset_completed": "Reset completed",
