--- a/custom_components/petkit/translations/en.json
+++ b/custom_components/petkit/translations/en.json
@@ -609,6 +609,9 @@
       "refill_notif": {
         "name": "Notif on refill need"
       },
+      "sand_saving": {
+        "name": "Sand saving"
+      },
       "shortage_alarm": {
         "name": "Shortage alarm"
       },
