:lipstick: fix icon and sensor naming to match petkit application

--- a/custom_components/petkit/translations/en.json
+++ b/custom_components/petkit/translations/en.json
@@ -610,7 +610,7 @@
         "name": "Notif on refill need"
       },
       "sand_saving": {
-        "name": "Sand saving"
+        "name": "Litter saving"
       },
       "shortage_alarm": {
         "name": "Shortage alarm"
